<resources>
    <string name="app_name">Supermarket</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nastavi">Nastavi</string>
    <string name="ZaboravljenaLozinka">Zaboravljena lozinka?</string>
    <string name="name">Ime</string>
    <string name="secon_name">Prezime</string>
    <string name="username">Korisnicko ime</string>
    <string name="password">Lozinka</string>
    <string name="cell_phone">Mobilni telefon</string>
    <string name="phone">Telefon</string>
    <string name="fax">Fax</string>
    <string name="street">Ulica</string>
    <string name="number">Broj</string>
    <string name="appartment">Broj stana</string>
    <string name="floor">Sprat</string>
    <string name="entrance">Ulaz</string>
    <string name="city">Grad</string>
    <string name="postal_code">Poštanski kod</string>
    <string name="newletter">Prijavi se za novoti</string>
    <string name="day">Dan</string>
    <string name="month">Mesec</string>
    <string name="year">Godina</string>
    <string name="male">Muški</string>
    <string name="female">Ženski</string>
    <string name="uslovi_koriscenja">Uslovi koriscenja</string>
    <string name="email">email</string>
    <string name="register">Registruj se</string>
    <string name="pib">PIB</string>
    <string name="company_name">Ime firme</string>
    <string name="staylogin">Ostani ulogovan</string>
    <string name="error_activity">Doslo je do greske!</string>
    <string name="error_internet">Doslo je do greske</string>
    <string name="add">Dodaj u korpu</string>
    <string name="add2">Dodaj u korpu</string>
    <string name="cart">Korpa</string>
    <string name="by">Kupi</string>
    <string name="buy">Kupi</string>
    <string name="buyer_information">Podaci o kupcu</string>
    <string name="address_information">Podaci o adresi</string>
    <string name="address">Adresa</string>
    <string name="verify_address">Potvrdi adresu</string>
    <string name="final_buying">Konačan račun</string>
    <string name="added">Proizvod je dodat u korpu</string>
    <string name="error_message">Doslo je do greske. Molim pokusajte kasnije</string>
    <string name="uspesna_kupovina">Čestitamo, Vaša narudzbina je uspešno prosleđena.</string>
    <string name="izmeni">Izmeni</string>
    <string name="skip">Skip</string>
    <string name="greskaLogovanje">Ukoliko ste uneli ispravnu email adresu, dobićete link za izmenu korisničke lozinke.</string>
    <string name="morateUnetisve">Morate uneti sve parametre</string>
    <string name="pogresniParametri">Pogresni parametri.</string>

    <string-array name="nacin_kupovine">
        <item>Novac u gotovini</item>
        <item>Cekovima gradjana</item>
        <item>Platnim karticama</item>
        <item>Ziralno placanje</item>
    </string-array>
</resources>
