<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:background="@drawable/bg">



    <RelativeLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_username"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:alpha="0.5"
            android:src="@drawable/username" />

        <supermarket.main.CustomComponents.EditTextFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/img_username"
            android:hint="@string/username"
            android:textColorHint="@color/white"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:layout_below="@+id/username">

        <ImageView
            android:id="@+id/img_password"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:alpha="0.5"
            android:src="@drawable/password" />

        <supermarket.main.CustomComponents.EditTextFont

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/img_password"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:textSize="15sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_nastavi"
        android:layout_width="335dp"
        android:layout_height="55dp"
        android:background="@color/dandelion"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="53dp"
        android:text="@string/nastavi"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/zaboravljena_lozinka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ZaboravljenaLozinka"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        />


</RelativeLayout>
