<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="supermarket.main.ui.activity.AddressActivity">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/back"
            android:text="@string/address"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_verify_address"
        android:layout_width="335dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/dandelion"
        android:text="@string/verify_address"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_button" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_verify_address"
        android:layout_below="@id/layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_street"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:alpha="0.5"
                    android:src="@drawable/home" />

                <supermarket.main.customComponents.EditTextFont
                    android:id="@+id/street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_toRightOf="@id/img_street"
                    android:hint="@string/street"
                    android:textColorHint="@color/white"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_number"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:alpha="0.5"
                    android:src="@drawable/home" />

                <supermarket.main.customComponents.EditTextFont
                    android:id="@+id/number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_toRightOf="@id/img_number"
                    android:hint="@string/number"
                    android:textColorHint="@color/white"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_appartment"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:alpha="0.5"
                    android:src="@drawable/home" />

                <supermarket.main.customComponents.EditTextFont
                    android:id="@+id/appartment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_toRightOf="@id/img_appartment"
                    android:hint="@string/appartment"
                    android:textColorHint="@color/white"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_floor"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:alpha="0.5"
                    android:src="@drawable/home" />

                <supermarket.main.customComponents.EditTextFont
                    android:id="@+id/floor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_toRightOf="@id/img_floor"
                    android:hint="@string/floor"
                    android:textColorHint="@color/white"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_entrance"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:alpha="0.5"
                    android:src="@drawable/home" />

                <supermarket.main.customComponents.EditTextFont
                    android:id="@+id/entrance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_toRightOf="@id/img_entrance"
                    android:hint="@string/entrance"
                    android:textColorHint="@color/white"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_city"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:alpha="0.5"
                    android:src="@drawable/home" />

                <!--<Spinner-->
                <!--android:id="@+id/spinner_city"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginLeft="20dp"-->
                <!--android:layout_toRightOf="@id/img_city">-->

                <!--</Spinner>-->

                <supermarket.main.customComponents.EditTextFont
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_toRightOf="@id/img_city"
                    android:hint="@string/city"
                    android:textColorHint="@color/white"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_postal_code"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:alpha="0.5"
                    android:src="@drawable/home" />

                <supermarket.main.customComponents.EditTextFont
                    android:id="@+id/postal_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_toRightOf="@id/img_postal_code"
                    android:hint="@string/postal_code"
                    android:textColorHint="@color/white"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/nacin_placanja"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:alpha="0.5" />

                <Spinner
                    android:id="@+id/spinner_nacin_placanja"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/nacin_placanja">

                </Spinner>


            </RelativeLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
